--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node -- server/index.js"
+    "dev": "nodemon --exec babel-node -- src/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "webpack-hot-middleware": "^2.5.0"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
